# TypingApp

./: .gitignore  CMakeLists.txt  Info.plist  README.md  documentation.md  documentation.txt  fix_inner_deps.sh.in  main.c  text.txt
assets/: appicon.icns
scripts/: fix_inner_deps.sh.in
src/: app_context.c  app_context.h  config.h  event_handler.c  event_handler.h  file_paths.c  file_paths.h  layout_logic.c  layout_logic.h  main.c  rendering.c  rendering.h  stats_handler.c  stats_handler.h  text_processing.c  text_processing.h  utf8_utils.c  utf8_utils.h
